<resources>

    <string name="app_name">STB SUIT</string>
    <string name="version">1.8 (git build)</string>
    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike-out</string>
    <string name="delete">Delete</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="ink">Ink</string>
    <string name="save">Save</string>
    <string name="proof">Proof</string>
    <string name="separation">Separation</string>
    <string name="print">Print</string>
    <string name="dismiss">Dismiss</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="print_failed">Print failed</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="okay">Okay</string>
    <string name="choose_value">Choose value</string>
    <string name="not_supported">Not supported</string>
    <string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
    <string name="more">More</string>
    <string name="accept">Accept</string>
    <string name="copy_text">copy text</string>
    <string name="format_currently_not_supported">Format currently not supported</string>
    <string name="toggle_reflow_mode">Toggle reflow mode</string>
    
    <string name="stb_title">SITTING ROOM</string>
    <string name="stb_tag">Please enter the STB\'s name!</string>
    <string name="save_successful">Save successful!</string>
    <string name="save_failure">Save failure!</string>
    <string name="music_disconnects">STB suit and STB network disconnected or STB suit has quit, unable to access the resource</string>
    <string name="background_download">Download background</string>
    <string name="search_again">Resources not found, please try again!</string>
    <string name="othershow_projection">Before the projection, please exit PPT, thank you!</string>
    <string name="no_sdcard">No SD card, can not push the PDF file!</string>
    <string name="network_ex_exit">Network exception, exit the download</string>
    <string name="phone">mobile</string>
    <string name="disconnect">Disconnect</string>
    <string name="stb_name">The STB name:</string>
    <string name="sitting_room">Sitting room</string>
    <string name="qr_code">Scan the following QR code, download STB suit mobile client</string>
    <string name="main_tag"> </string>
    <string name="film_name">Film name</string>
    <string name="ad_search">Press [menu button] for advanced search</string>
    <string name="cur_loading">Current download progress：</string>
    <string name="back_download">Background download</string>
    <string name="artist">Artist:</string>
    <string name="mall_film_name">Film name:</string>
    <string name="area">Area:</string>
    <string name="main_classification">Main classification:</string>
    <string name="classification">Classification:</string>
    <string name="years">Years:</string>

</resources>