<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity" >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40px"
                android:textColor="@android:color/black"
                android:text="@string/stb_name" />
        <EditText
                android:id="@+id/ch_box_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="40px"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:singleLine="true"
                android:text="@string/sitting_room" />
        <Button
                android:id="@+id/ch_box_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="40px"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/save" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40px"
        android:textColor="@android:color/black"
        android:text="@string/qr_code" />

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp">

        <ImageView
            android:src="@drawable/tv_server_code_android"
            android:layout_width="240dip"
            android:layout_height="240dip"
            />
,
         <TextView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:visibility="invisible"
                 />

        <ImageView
                android:src="@drawable/tv_server_code_ios"
                android:layout_width="240dip"
                android:layout_height="240dip"
                />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp">

        <TextView
                android:layout_width="240dip"
                android:layout_height="wrap_content"
                android:textSize="36px"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:text="Android" />
                 />

        <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                />

        <TextView
                android:layout_width="240dip"
                android:layout_height="wrap_content"
                android:textSize="36px"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:text="IOS" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36px"
        android:textColor="@android:color/black"
        android:text="@string/main_tag" />

</LinearLayout>
